--- a/workout_tracker_backend/render.yaml
+++ b/workout_tracker_backend/render.yaml
@@ -11,7 +11,15 @@ services:
         value: production
       - key: PORT
         value: 10000
-      - key: MONGODB_URI
-        sync: false # Set this in Render dashboard as environment variable
+      - key: DATABASE_URL
+        fromDatabase:
+          name: workout-tracker-db
+          property: connectionString
       - key: FRONTEND_URL
-        sync: false # Set this in Render dashboard as environment variable
+        value: https://your-netlify-app.netlify.app
+
+databases:
+  - name: workout-tracker-db
+    databaseName: workout_tracker
+    user: workout_tracker_user
+    plan: free
